--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ticket-bot",
+  "name": "quinx-ticket-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
